# wishlist

./: .env  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
application/: __init__.py  config.py  db.py  main.py
application/api/: routes.py
application/forms/: forms.py
application/static/: docs.yaml
application/static/css/: style.css
application/swagger/: config.py
application/templates/: add.html  base.html  index.html  login.html  register.html  top_navigation.html
application/users/: forms.py  models.py  routes.py  users.py
application/wishlist/: models.py  wishlist.py
migrations/versions/: 5e90a512caf8_initial_migration.py  689218b9b142_rename_tables.py  8bed03216227_add_user_model.py  92211115fdc2_add_uniqueconstraint_email.py  b65978121af7_itemmodel_price_is_decimal_now.py  f543bca0da37_add_item_model.py  ffad783488ec_add_relationship.py
templates/: base.html  index.html
