[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = ["Roman Ivanov <sitdoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.3.2"
flask-sqlalchemy = "^3.1.1"
environs = "^11.0.0"
sqlalchemy = "^2.0.32"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
